I deleted the technical-experience webpage. I also linked the technical and contact page so it does not open up a new page

--- a/css/style.css
+++ b/css/style.css
@@ -84,14 +84,14 @@ a{
         text-shadow: none;
 }
 
-section{
+/*section{
 	line-height: 1.5em;
 	font-size: 0.9em;
 	padding: 40px;
 	width: 75%;
 	margin: 0 auto;
 
-}
+}*/
 
 
 	/*wont be displayed unless needed*/
@@ -153,9 +153,4 @@ ul {
         border-right: solid 1px #c6c7ca;
         padding-top: 10px;
         text-align: center;
-}
-
-
-
-
 }
