--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,26 @@
+*{
+	margin: 0;
+	padding:0;
+}
+
 .header
 { /* this is how I placed the picture in the centre of my header banner  */
 	float: center;
 }
 
-
-
-h1
+.mypic
 { /*  this is how I styled and placed my top green banner in the center */
-	background-color: white;
+	width:100%;
 	text-align: center;
+	padding-left: 5px;
 	font: sans-serif;
 }
 
-
+.container
+{
+    margin: 16px;
+		background-color: #999999;
+}
 
 h2
 { /*  this I style the Title of the content of every page*/
@@ -20,23 +28,17 @@ h2
 	padding-top: 10px;
 }
 
-
-
-h2:after /* this is how I styled the straight line underneath the title of every page*/
-	{
-		content: ' ';
+h2:after
+{ /* this is how I styled the straight line underneath the title of every page*/
+	content: ' ';
 	display:block;
 	border:2px solid green;
 	border-bottom: 1px solid black;
-	}
-
-
+}
 
 @media screen and (max-width : 320px) {
 ul {
         display: none;
 }
-
-
 
 .justify-content-center
